Remove WanDB, make defaults match my usage
Starting to simplify this package down to just the bits I need. First
change the defaults for a bunch of the command line arguments to what I
actually use. Then, remove wandb, which I don't use.

--- a/pix2pix.ipynb
+++ b/pix2pix.ipynb
@@ -189,7 +189,7 @@
    },
    "outputs": [],
    "source": [
-    "!python test.py --dataroot ./datasets/facades --direction BtoA --model pix2pix --name facades_label2photo_pretrained --use_wandb"
+    "!python test.py --dataroot ./datasets/facades --direction BtoA --model pix2pix --name facades_label2photo_pretrained"
    ]
   },
   {
