--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -159,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "!python train.py --dataroot ./datasets/horse2zebra --name horse2zebra --model cycle_gan --display_id -1"
+    "!python train.py --dataroot ./datasets/horse2zebra --name horse2zebra --model cycle_gan"
    ]
   },
   {
